# rrBLUP

./: .gitignore  README.md  demo.R  demo.ipynb  pyproject.toml
data/: small.test.csv  small.train.csv
examples/: demo.R
pyrrblup/: __init__.py  rrBLUP.py
tests/: conftest.py  test_A_mat.py  test_mixed_solve.py
