[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrrblup"
version = "0.1.0"
description = "Python implementation of rrBLUP related functions"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License", # Corrected
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==1.24.0",
    "scikit-learn==1.2.0",
    "pandas==1.5.2",
    "scipy==1.9.3",
    "rpy2==3.5.6"
]

# [project.urls]
# "Homepage" = "https://github.com/example/pyrrblup"
# "Bug Tracker" = "https://github.com/example/pyrrblup/issues"
