[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrrblup"
license = "Apache-2.0"
version = "0.1.0"
description = "Python implementation of rrBLUP related functions"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.0",
    "scikit-learn==1.4.0",
    "pandas==2.2.3",
    "scipy==1.13.1",
]
authors = [
    {name = "Hongyang Chen"}
]


# [project.urls]
# "Homepage" = "https://github.com/zhejiangzhuque/rrBLUP/"
# "Bug Tracker" = "https://github.com/zhejiangzhuque/rrBLUP/"

[tool.setuptools]
packages = ["pyrrblup"]